--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-crispy-forms==1.9.2
 django-filter==2.3.0
 django-on-heroku==1.0.1
 djangorestframework==3.11.1
+gunicorn==20.0.4
 idna==2.10
 itypes==1.2.0
 Jinja2==2.11.2
